--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <nav class="main">
             <div class="icon">
                 <a href="#" class="fas fa-home"> Shops</a>
-                <a href="#" class="fas fa-home"> Categorys</a>
+                <a href="#" class="fas fa-receipt"> Categorys</a>
                 <a href="#" class="fas fa-star"> Brands</a>
-                <a href="#" class="fas fa-check"> Quick Coin</a>
+                <a href="#" class="fas fa-gift"> Quick Coin</a>
                 <a href="#" class="fas fa-coins"> Make money</a>
             </div>
         </nav>
