--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <label for="toggler" class="fas fa-bars"></label>
         <nav class="main">
             <div class="icon">
-                <a href="#" class="fas fa-home"> Shops</a>
+                <a href="#" class="fas fa-store"> Shops</a>
                 <a href="#" class="fas fa-receipt"> Categorys</a>
                 <a href="#" class="fas fa-star"> Brands</a>
                 <a href="#" class="fas fa-gift"> Quick Coin</a>
